fix: alignment of bottom arrow

--- a/src/components/layout/AuctionChart/styles.css
+++ b/src/components/layout/AuctionChart/styles.css
@@ -21,6 +21,5 @@
   border-top: 7px solid var(--text-faded);
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-  margin-left: -5px;
-  /* transform: translateY(-50%); */
+  margin-left: -6px;
 }
